Bug 1319426 - Don't keep ANGLE shader compilers around. r=lsalzman

This will also make it easier if we want to reuse compilers/validators.

Differential Revision: https://phabricator.services.mozilla.com/D35398